# gmapy

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  environment.yml  pyproject.toml
examples/: cf252_nubar_with_usu_wip.ipynb  example-000-basic-usage.ipynb  example-001-run-gmap.py  example-002-chisquare-calc.ipynb  example-003-plot-evaluation-results.ipynb  example-004-python-versus-fortran-gmap.ipynb  example-005-compute-sacs-results.ipynb  example-006-gmap-with-ratio-of-sacs.py  example-007-usu-uncertainties.py  gma_analyses.ipynb  gma_mannhart_SACS_only.py  gma_mannhart_pointwise_SACS.py  gma_mannhart_pointwise_SACS_debug.py  numeric_vs_analytic_sensitivities.ipynb  prediction_sensitivity_test.py  read_write_test.py
gmapi/: __init__.py  gma_database_class.py  gma_database_usu_class.py  gmap.py  inference.py  optimization_auxfuns.py
gmapy/: __init__.py  devutils.py  gma_database_class.py  gma_database_usu_class.py  gmap.py  inference.py  mcmc_inference.py  optimization_auxfuns.py  posterior.py  posterior_usu.py
legacy-tests/: README.md
source/: GMAP.py  basic_maps.py  conversion_utils.py  data_extraction_functions.py  data_management.py  database_reading.py  database_reading_utils.py  database_writing_utils.py  fortran_utils.py  gmap_functions.py  gmap_snippets.py  inference.py  inference_new.py  linpack_slim.f  linpack_slim.pyf  output_management.py
tests/: test_basic_integral_mappings.py  test_basic_integral_of_product_mappings.py  test_basic_mappings.py  test_basic_product_mapping.py  test_compound_map.py  test_compound_map_tf.py  test_compound_map_with_error_maps.py  test_compound_map_with_error_maps_tf.py  test_conversions.py  test_cross_section_maps_tf.py  test_gma_database_class.py  test_gma_database_usu_class.py  test_gmap_simplified.py  test_inference.py  test_legacy_divergence.py  test_lm_update.py  test_mapping_elements.py  test_mapping_jacobians.py  test_usu_mapping.py  (+10 more)
(+347 files in other folders)
