[tool.poetry]
name = "gmapy"
version = "0.13"
description = "package to evaluate cross sections"
authors = ["Georg Schnabel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
pandas = "~1.4.0"
# pinned scipy version because
# setdiag method seems to have issues
# in 1.13.0 and later
scipy = "1.12.0"
fortranformat = "^1.2.2"
scikit-sparse = "^0.4.6"
statsmodels = "^0.14.0"
tensorflow-probability = "0.24.0"
tensorflow = "2.16.1"
tf-keras = "2.16.0"
dill = "^0.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
openpyxl = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
